[package]
name = "world_macros"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc_macro = true

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
proc-macro2 = "1.0"
syn = "1.0.86"
quote = "1.0"
debugless-unwrap = "0.0.4"
itertools = "0.10.3"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
